--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,3 +14,10 @@ services:
       - NVIDIA_VISIBLE_DEVICES=all
     stdin_open: true
     tty: true
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
