--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,16 @@ services:
       - "8188:8188"
     volumes:
       - ./app:/app
+      - cache:/root/.cache
+      # If you want you could create a symlink to E:/my_checkpoints at ./app/models/checkpoints
+      #
+      # If this setup is on disk C, you will have to share some of disk E to Docker:
+      # Docker Desktop -> settings -> Resources -> File sharing
+      # And add E:/my_checkpoints
+      #
+      # If you add some here, you will need to `docker compose up` again
+      #
+      # - E:/my_checkpoints:/app/models/checkpoints
     runtime: nvidia
     environment:
       - NVIDIA_VISIBLE_DEVICES=all
@@ -22,3 +32,6 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+
+volumes:
+  cache:
